# 00101010-Kisanverse

./: .gitignore  PredictionReport.md  README.md  docker-compose.yaml  env_example  requirements.txt
AIPredictions/: README.md
AIPredictions/Disease_Identification/: Plant_Disease_Detection.ipynb  main_app.py  train.py
AIPredictions/Price_Prediction/: Jowar.csv  Maize.csv  Mango.csv  Onion.csv  Potato.csv  Rice.csv  Wheat.csv  test.py  train_final.py
AIPredictions/Soil_Identification/: XGBoost.py  plots.py  resnet50.py  resnet50eval.py  resnet50yateen.py
AIPredictions/Weather_Prediction/: FinalYateen.py  Openmeteo.py  StudioFinal.py  monthlyopemmeteo.py  newtry.py  nsidc_SMAP_L4_v6_data_download.py  plots.py  prophet.py
AIcallAssistant/: Dockerfile  README.md  app.py  backend_functions.py  config.py  conversation_manager.py  llm_handler.py  llm_selector.py  models.py  pyproject.toml  stt_handler.py  stt_selector.py  test.py  twilio_handler.py  twilio_simulator.py
Crop_prediction/: data_sources.py  evaluation.py  explanation.py  fetch_agronomic_data.py  fetch_news_data.py  filtering.py  main.py  models.py  pipeline.py  pyproject.toml  recommendation_api.py  test.py
admin/: Dockerfile  package-lock.json  package.json
admin/app/: globals.css  layout.tsx  page.tsx
admin/components/: chart-components.tsx  dashboard-cards.tsx  (+5 more)
app/: insert_data.py  main.py  sadas.py  tests.py  wea.py
backend/: .gitignore  Dockerfile  README.md  requirements.txt
docs/: ai.md  contracts.md  listing.md  subsidy.md  user.md
mobile-app/: package-lock.json  package.json
(+119 files in other folders)
