[project]
name = "haryana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gtts>=2.5.4",
    "livekit-agents[silero]>=1.0.19",
    "livekit-api>=1.0.2",
    "livekit-protocol>=1.0.2",
    "livekit-plugins-silero>=0.1.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "openai-whisper>=20240930",
    "playsound==1.2.2",
    "pydub>=0.25.1",
    "pyngrok>=7.2.5",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.2",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.1",
    "torchaudio>=2.7.0",
    "twilio>=9.5.2",
    "webrtcvad-wheels>=2.0.14",
    "websockets>=15.0.1",
    "pyttsx3>=2.98",
    "e2enetworks>=1.4.4",
]
