[project]
name = "crop-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.7",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.58",
    "lxml>=5.4.0",
    "ollama>=0.4.8",
    "pydantic>=2.11.4",
    "requests",
    "sentence-transformers>=4.1.0",
]
